--- a/css/style.css
+++ b/css/style.css
@@ -29,11 +29,28 @@ body {
     text-align: center;
 }
 
-.hint, .manually, .render, .safe-click {
+.btn-st {
+    padding: 10px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    background-color: lightcoral;
+    color: black;
+    border: 1px solid black;
+    font-size: 18.5px;
+    height: 50px;
+    width: 300px;
+    display: block;
+}
+.undo, .redo{
+    display: inline;
+    width: 150px;
+}
+
+.hint, .manually, .render, .safe-click, .undo {
     cursor: pointer;
 }
 
-.hint:hover, .manually:hover, .render:hover, .safe-click:hover {
+.hint:hover, .manually:hover, .render:hover, .safe-click:hover, .undo:hover, .redo:hover {
     cursor: pointer;
     box-shadow: 2px 0px 5px 0px rgba(0, 0, 0, 0.75);
     background-color: lightblue;
@@ -186,18 +203,6 @@ button {
     margin-bottom: 10px ;
 } */
 
-.btn-st {
-    padding: 10px;
-    margin-bottom: 10px;
-    margin-top: 10px;
-    background-color: lightcoral;
-    color: black;
-    border: 1px solid black;
-    font-size: 18.5px;
-    height: 50px;
-    width: 300px;
-    display: block;
-}
 
 .time {
     margin-right: 0px;
@@ -214,7 +219,7 @@ h5 {
 .footer {
     position: relative;
     width: 100wh;
-    height: 225px;
+    height: 25px;
     background-color: #006161;
     top: calc(100vh - 25px);
     color: white;
